--- a/html/vertical-menu-template/auth-login-cover.html
+++ b/html/vertical-menu-template/auth-login-cover.html
@@ -126,7 +126,7 @@
                 <div class="d-flex justify-content-between">
                   <div class="form-check mb-0 ms-2">
                     <input class="form-check-input" type="checkbox" id="remember-me" />
-                    <label data-i18n="Remember Me" class="form-check-label" for="remember-me">تكرني</label>
+                    <label data-i18n="Remember Me" class="form-check-label" for="remember-me">تذكرني</label>
                   </div>
                   <a href="auth-forgot-password-cover.html">
                     <p data-i18n="Forgot Password?" class="mb-0">نسيت كلمة السر؟</p>
