--- a/html/front-pages/landing-page.html
+++ b/html/front-pages/landing-page.html
@@ -543,7 +543,7 @@
           <div class="features-icon-wrapper row gx-0 gy-6 g-sm-12">
             <div class="col-lg-4 col-sm-6 text-center features-icon-box">
               <div class="text-center mb-4">
-                <img src="../../assets/img/front-pages/icons/laptop2.png" alt="laptop charging" />
+                <img src="../../assets/img/front-pages/icons/laptop2.png" style="width: 64px;" alt="laptop charging" />
               </div>
               <h5 class="mb-2">كود الجودة</h5>
               <p class="features-icon-description">
@@ -552,7 +552,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center features-icon-box">
               <div class="text-center mb-4">
-                <img src="../../assets/img/front-pages/icons/rocket.png" alt="transition up" />
+                <img src="../../assets/img/front-pages/icons/rocket.png" style="width: 64px;" alt="transition up" />
               </div>
               <h5 class="mb-2">تحديثات مستمرة</h5>
               <p class="features-icon-description">
@@ -561,7 +561,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center features-icon-box">
               <div class="text-center mb-4">
-                <img src="../../assets/img/front-pages/icons/paper.png" alt="edit" />
+                <img src="../../assets/img/front-pages/icons/paper.png" style="width: 64px;" alt="edit" />
               </div>
               <h5 class="mb-2">طقم المبتدئين</h5>
               <p class="features-icon-description">
@@ -570,7 +570,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center features-icon-box">
               <div class="text-center mb-4">
-                <img src="../../assets/img/front-pages/icons/check.png" alt="3d select solid" />
+                <img src="../../assets/img/front-pages/icons/check.png" style="width: 64px;" alt="3d select solid" />
               </div>
               <h5 class="mb-2">واجهة برمجة التطبيقات جاهزة</h5>
               <p class="features-icon-description">
@@ -579,14 +579,14 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center features-icon-box">
               <div class="text-center mb-4">
-                <img src="../../assets/img/front-pages/icons/user.png" alt="lifebelt" />
+                <img src="../../assets/img/front-pages/icons/user.png" style="width: 64px;" alt="lifebelt" />
               </div>
               <h5 class="mb-2">دعم ممتاز</h5>
               <p class="features-icon-description">مستند سهل المتابعة يحتوي على الكثير من المراجع وأمثلة التعليمات البرمجية.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center features-icon-box">
               <div class="text-center mb-4">
-                <img src="../../assets/img/front-pages/icons/keyboard.png" alt="google docs" />
+                <img src="../../assets/img/front-pages/icons/keyboard.png" style="width: 64px;" alt="google docs" />
               </div>
               <h5 class="mb-2">موثقة بشكل جيد</h5>
               <p class="features-icon-description">مستند سهل المتابعة يحتوي على الكثير من المراجع وأمثلة التعليمات البرمجية.</p>
@@ -729,7 +729,7 @@
               <div class="card border border-primary shadow-xl">
                 <div class="card-header">
                   <div class="text-center">
-                    <img src="../../assets/img/front-pages/icons/plane.png" alt="plane icon" class="mb-8 pb-2" />
+                    <img src="../../assets/img/front-pages/icons/shuttle-rocket.png" alt="plane icon" class="mb-8 pb-2" />
                     <h4 class="mb-0">فريق</h4>
                     <div class="d-flex align-items-center justify-content-center">
                       <span class="price-monthly h2 text-primary fw-extrabold mb-0">$29</span>
@@ -906,7 +906,7 @@
             <div class="col-sm-6 col-lg-3">
               <div class="card border border-primary shadow-none">
                 <div class="card-body text-center">
-                  <img src="../../assets/img/front-pages/icons/laptop2.png" alt="laptop" class="mb-4" />
+                  <img src="../../assets/img/front-pages/icons/laptop2.png" style="width: 64px;" alt="laptop" class="mb-4" />
                   <h3 class="mb-0">7.1k+</h3>
                   <p class="fw-medium mb-0">
                     تذاكر الدعم<br />
@@ -1231,13 +1231,13 @@
 
     <!-- Footer: Start -->
     <footer class="landing-footer bg-body footer-text">
-      <div class="footer-top position-relative overflow-hidden z-1">
-        <img
+      <div class="footer-top position-relative overflow-hidden z-1" style="background-color: #272727;">
+<!--         <img
           src="../../assets/img/front-pages/backgrounds/footer-bg-light.png"
           alt="footer bg"
           class="footer-bg banner-bg-img z-n1"
           data-app-light-img="front-pages/backgrounds/footer-bg-light.png"
-          data-app-dark-img="front-pages/backgrounds/footer-bg-dark.png" />
+          data-app-dark-img="front-pages/backgrounds/footer-bg-dark.png" /> -->
         <div class="container">
           <div class="row gx-0 gy-6 g-lg-10">
             <div class="col-lg-5">
